Fixed min-screen size on mobile

--- a/Scss/_apparel.scss
+++ b/Scss/_apparel.scss
@@ -44,10 +44,11 @@ $DarkGrayishRed: hsl(0, 6%, 24%);
           font-weight: 500;
         }
         p {
-          margin-top: 1rem;
+          margin-top: 2rem;
           color: $DesaturatedRed;
-          font-size: 0.8rem;
-          margin-bottom: 1rem;
+          font-size: 1rem;
+          margin-bottom: 4rem;
+          line-height: 25px;
         }
 
         .hero__input {
@@ -57,7 +58,7 @@ $DarkGrayishRed: hsl(0, 6%, 24%);
           border-radius: 30px;
           width: 250px;
           margin: 0 auto;
-
+        
           input {
             background: transparent;
             width: 250px;
